Fix JEI integration and reduce reliance on internal classes